# Streamlit-Authenticator

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  apply-hash.py  config.source.yaml  config.yaml  example.py  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: test.yaml
StreamlitAuth/: __init__.py  utils.py
docs/: conf.py  index.rst  requirements.txt  streamlit_authenticator.rst  streamlit_authenticator.utilities.rst  streamlit_authenticator.views.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  streamlit_authenticator.controllers.doctree  streamlit_authenticator.doctree  streamlit_authenticator.models.doctree  streamlit_authenticator.views.doctree
docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  streamlit_authenticator.html  streamlit_authenticator.models.html  streamlit_authenticator.utilities.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/streamlit_authenticator/views/: authentication_view.html
docs/_build/html/_sources/: index.rst.txt  streamlit_authenticator.controllers.rst.txt
docs/_build/html/_static/: basic.css  documentation_options.js  language_data.js
streamlit_authenticator/: __init__.py  authenticate.py  cloud.py  data_store.py  exceptions.py  hasher.py  i18n.py  params.py  utils.py  validator.py
streamlit_authenticator/authenticate/: __init__.py
streamlit_authenticator/authenticate/authentication/: __init__.py
streamlit_authenticator/authenticate/cookie/: __init__.py
streamlit_authenticator/controllers/: __init__.py  authentication_controller.py  cookie_controller.py
streamlit_authenticator/docs/: modules.rst  streamlit_authenticator.models.rst
streamlit_authenticator/docs/_build/doctrees/: environment.pickle  index.doctree  streamlit_authenticator.utilities.doctree
streamlit_authenticator/docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  streamlit_authenticator.controllers.html  streamlit_authenticator.views.html
streamlit_authenticator/docs/_build/html/_sources/: index.rst.txt
streamlit_authenticator/locale/: en-US.yaml  pt-BR.yaml
streamlit_authenticator/models/: __init__.py  authentication_model.py  cloud.py  cloud_model.py  cookie_model.py  two_factor_auth_model.py
streamlit_authenticator/models/2fa/: __init__.py
streamlit_authenticator/models/cloud/: __init__.py  cloud_model.py
streamlit_authenticator/models/oauth2/: __init__.py  auth0_model.py  google_model.py  microsoft_model.py
streamlit_authenticator/utilities/: __init__.py  encryptor.py  exceptions.py  hasher.py  helpers.py  validator.py
streamlit_authenticator/views/: __init__.py  authentication_view.py
tests/: app.py  pytest.py  streamlit_authenticator_test.py  tests.py
